--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,42 @@ pipeline:
       - npm test
   publish:
     image: plugins/docker
-    repo: drone/node-demo
-    secrets: [ docker_username, docker_password ]
+    repo: luisredda/node-demo
+    username:
+      from_secret: u_docker
+    password: 
+      from_secret: p_docker
     dry_run: true # remove this to publish
+  harness deploy:
+    image: luisredda/drone-harness-plugin
+    settings:  
+    application: "Harness Demo Application"
+    type: "PIPELINE"
+    entityname: "CD Pipeline"
+    accountid:
+      from_secret: harness_acctid
+    apikey: 
+      from_secret: harness_secret
+    body: |
+     variableInputs: [ 
+      {
+        name: "Service"
+        variableValue: {
+          type: NAME
+          value: "order-service"
+        }
+      }
+      ], 
+      serviceInputs: [ {
+        name: "order-service", 
+        artifactValueInput: {
+          valueType: BUILD_NUMBER
+          buildNumber: {
+            buildNumber: "1"
+      artifactSourceName: "harness_todolist-sample"
+          }
+        }}  ]
+    when:
+      repo:
+      - luisredda/drone-with-nodejs
+
