--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ pipeline:
   meu step custom:
     image: alpine
     commands:
-      - echo: "hello world"
+      - echo "hello world"
     depends_on:
       - build
   harness deploy:
